<resources>
    <string name="app_name">AppMobileSpringLibrary</string>
    <string name="action_settings">Settings</string>
    <string name="BemVindo">BEM-VINDO!</string>
    <string name="SpringLibrary">Spring Library</string>
    <string name="Versao">v. 1.7.10</string>
    <string name="HomeIcon">Home</string>
    <string name="PesquisaIcon">Pesquisar</string>
    <string name="CarrinhoIcon">Carrinho</string>
    <string name="VoltarIcon">Voltar</string>
    <string name="CancelarIcon">Cancelar</string>
    <string name="Entre">Entre com sua conta</string>
    <string name="Email">Email</string>
    <string name="Senha">Senha</string>
    <string name="Login">Login</string>
    <string name="SemConta">Não possui uma conta?</string>
    <string name="Registre">Registre-se no site</string>
    <string name="Indicados">Indicados</string>
    <string name="Promocoes">Promoções</string>
    <string name="Populares">Populares</string>
    <string name="Livro1Desc">Escravidão Volume II - Lauren Gomes</string>
    <string name="Livro2Desc">Anexos - Rainbow Rowell</string>
    <string name="Livro3Desc">A Lei do Triunfo - Napoleão Hill</string>
    <string name="Livro4Desc">A Garota do Lago - Charlie Donlea</string>
    <string name="Livro5Desc">Mais Esperto que o Diabo - Napoleão Hill</string>
    <string name="Livro6Desc">Arte da Sabedoria - Baltasar Gracián</string>
    <string name="Souvenir1Desc">Harry Potter - A Ordem da Phenix</string>
    <string name="Souvenir2Desc">Harry Potter - Prisioneiro de Askaban</string>
    <string name="Souvenir3Desc">Harry Potter - O Cálice de Fogo</string>
    <string name="Suspense">Suspense</string>
    <string name="Romance">Romance</string>
    <string name="Drama">Drama</string>
    <string name="Suspense1Desc">Escravidão Volume II - Lauren Gomes</string>
    <string name="Suspense2Desc">Anexos - Rainbow Rowell</string>
    <string name="Suspense3Desc">A Lei do Triunfo - Napoleão Hill</string>
    <string name="RomanceDesc1">A Garota do Lago - Charlie Donlea</string>
    <string name="RomanceDesc2">Mais Esperto que o Diabo - Napoleão Hill</string>
    <string name="RomanceDesc3">Arte da Sabedoria - Baltasar Gracián</string>
    <string name="Drama1Desc">Harry Potter - A Ordem da Phenix</string>
    <string name="Drama2Desc">Harry Potter - Prisioneiro de Askaban</string>
    <string name="Drama3Desc">Harry Potter - O Cálice de Fogo</string>
    <string name="LivroTitulo">Os Sete Maridos de Evelyn Hugo</string>
    <string name="AddCarrinho">Adicionar ao carrinho</string>
    <string name="Preco">R$00,00</string>
    <string name="CodLivro">(Cód: 0000001)</string>
    <string name="Desc">Descrição</string>
    <string name="Autor">Autor: Reid, Evelyn Hugo</string>
    <string name="AnoEdit">Ano de edição: 2019</string>
    <string name="Marca">Marca: Washington Square</string>
    <string name="Pesquisar">Pesquisar</string>
    <string name="EvelynHugo">Evelyn Hugo</string>
    <string name="ResultEvelynHugo">Resultados para Evelyn Hugo</string>
    <string name="DadosPessoais">Dados Pessoais</string>
    <string name="PrimeiroNome">Primeiro Nome</string>
    <string name="Sobrenome">Sobrenome</string>
    <string name="CPF_CNPJ">CPF/CPNJ</string>
    <string name="CPF">CPF</string>
    <string name="CNPJ">CPNJ</string>
    <string name="Telefone">Telefone Residencial</string>
    <string name="TelefoneEmpresa">Telefone Empresarial</string>
    <string name="CEP">CEP</string>
    <string name="Confirmar">Confirmar</string>
    <string name="Celular">Celular</string>
    <string name="DataNasc">Data de Nascimento</string>
    <string name="NumEnd">Número</string>
    <string name="Complemento">Complemento</string>
    <string name="IrPag">Ir para o pagamento</string>
    <string name="HintCpf">999.999.999-99</string>
    <string name="HintCnpj">00.000.000/0001-00</string>
    <string name="HinTel">(DDD) + Número</string>
    <string name="HintCel">(DDD) + Número</string>
    <string name="HintCEP">00000-000</string>
    <string name="HintDataNasc">dd/mm/yy</string>
    <string name="HintComplemento">Opcional</string>
    <string name="ConfigPerfil">Configurações do perfil</string>
    <string name="Nome">Nome</string>
    <string name="NomeUser">Kirill</string>
    <string name="EmailUser">ivcswebofficial@gmail.com</string>
    <string name="CEPUser">05670-130</string>
    <string name="CPFUser">506.501.609-69</string>
    <string name="CelUser">(11) 99765-1965</string>
    <string name="SenhaUser">********</string>
    <string name="Editar">Editar</string>
    <string name="Salvar">Salvar alterações</string>
    <string name="FormaPag">Selecione a forma de pagamento</string>
    <string name="Debito">Débito</string>
    <string name="Credito">Crédito</string>
    <string name="Pix">Pix</string>
    <string name="CartaoCred">Cartão de crédito</string>
    <string name="NumCartao">Número do cartão</string>
    <string name="NomeCartao">Nome Impresso no Cartão</string>
    <string name="Val">Validade</string>
    <string name="Mes">Mês</string>
    <string name="Ano">Ano</string>
    <string name="CodCartao">Código de Segurança</string>
    <string name="Pagar">Pagar</string>
    <string name="CompraFinal">Compra finalizada com sucesso!</string>
    <string name="Titulo">Já conhece nossa loja?</string>
    <string name="Rua">Rua Guaipá, 678</string>
    <string name="Vila">Vila Leopoldina</string>
    <string name="SaoPaulo">São Paulo, São Paulo - 05089-000</string>
    <string name="Horarios">Horários:</string>
    <string name="SegSex">Segunda a Sexta 9h - 22h</string>
    <string name="SabDom">Sábado e Dom.	10h - 20h</string>
    <string name="TelContato">Telefone: (11) 9999-9999</string>
    <string name="MeuCarrinho">MEU CARRINHO</string>
    <string name="LivroExemplo">The Lion, the Witch and the Wardrobe</string>
    <string name="Preco1">R$23,99</string>
    <string name="Preco2">R$59,99</string>
    <string name="ValorTotal">R$83,99</string>
    <string name="Continuar">Continuar</string>
    <string name="AddLivro">Adicionar mais livros</string>
    <string name="total">Total:</string>
    <string name="ConfirmarSenha">Confirmar senha</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="CliFis">Cliente Físico</string>
    <string name="CliJuri">Cliente Jurídico</string>
    <string name="NomeFantasia">Nome Fantasia</string>
    <string name="ReprCliJuri">Representante</string>
    <string-array name="MesCartao">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="AnoCartao">
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>21</item>
        <item>32</item>
    </string-array>
    <string name="TxtPreco">Preço</string>
    <string name="TxtPrecoExemplo">R$0,00</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logo">TODO</string>
</resources>