<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadCliFis">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textDadosPessoais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="83dp"
                android:layout_marginTop="20dp"
                android:text="@string/CliFis"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/PrimeiroNome" />

            <EditText
                android:id="@+id/editTextPrimeiroNome"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Nome"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <TextView
                android:id="@+id/txtSobrenome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginTop="-68dp"
                android:text="@string/Sobrenome" />

            <EditText
                android:id="@+id/editTextSobrenome"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Sobrenome"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/txtCPF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/CPF" />

            <EditText
                android:id="@+id/editTextNumberCPF"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/HintCpf"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:autofillHints="" />

            <TextView
                android:id="@+id/txtTelRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginTop="-67dp"
                android:text="@string/Telefone" />

            <EditText
                android:id="@+id/editTextPhoneTelefone"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/HinTel"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/txtCEP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/CEP" />

            <EditText
                android:id="@+id/editTextNumberCEP"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:ems="10"
                android:hint="@string/HintCEP"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:autofillHints="" />

            <TextView
                android:id="@+id/txtCel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginTop="-67dp"
                android:text="@string/Celular" />

            <EditText
                android:id="@+id/editTextPhoneCel"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:ems="10"
                android:hint="@string/HintCel"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:autofillHints="" />

            <TextView
                android:id="@+id/txtDataNasc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/DataNasc" />

            <EditText
                android:id="@+id/editTextDataNasc"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/HintDataNasc"
                android:inputType="date"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginTop="-68dp"
                android:text="@string/NumEnd" />

            <EditText
                android:id="@+id/editTextNumberNumEnd"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/NumEnd"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/txtComplemento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Complemento" />

            <EditText
                android:id="@+id/editTextPersonNameComp"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/HintComplemento"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <Button
                android:id="@+id/btnCadCliFis"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#F448B0"
                android:text="@string/Cadastrar"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>