<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textDadosPessoais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="20dp"
                android:text="@string/CliJuri"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNomeFantasia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/NomeFantasia" />

            <EditText
                android:id="@+id/editTextNomeFantasia"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/NomeFantasia"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:textSize="16sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/txtRepresentante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginTop="-68dp"
                android:text="@string/ReprCliJuri" />

            <EditText
                android:id="@+id/editTextRepresentante"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/ReprCliJuri"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:textSize="16sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/txtCNPJ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/CNPJ" />

            <EditText
                android:id="@+id/editTextNumberCNPJ"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/HintCnpj"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:textSize="16sp"
                android:autofillHints="" />

            <TextView
                android:id="@+id/txtTelefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginTop="-67dp"
                android:text="@string/TelefoneEmpresa" />

            <EditText
                android:id="@+id/editTextPhoneTelefone"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/HinTel"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:textSize="16sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/txtCEP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/CEP" />

            <EditText
                android:id="@+id/editTextNumberCEP"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/HintCEP"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtCel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginTop="-67dp"
                android:text="@string/Celular" />

            <EditText
                android:id="@+id/editTextPhoneCel"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:ems="10"
                android:hint="@string/HintCel"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:textSize="16sp"
                android:autofillHints="" />

            <TextView
                android:id="@+id/txtNumEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/NumEnd" />

            <EditText
                android:id="@+id/editTextNumberNumEnd"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/NumEnd"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#00757575"
                android:textSize="16sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/txtComplemento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Complemento" />

            <EditText
                android:id="@+id/editTextPersonNameComp"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/HintComplemento"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <Button
                android:id="@+id/btnCadastrarJuri"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#F448B0"
                android:text="@string/Cadastrar"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>