<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFooter"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="#F6CFE0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imgBtnPesquisa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:backgroundTint="#00FFFFFF"
            android:minHeight="48dp"
            app:srcCompat="@drawable/iconsearchoff" />

        <ImageButton
            android:id="@+id/imgBtnCarrinho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="280dp"
            android:backgroundTint="#00FFFFFF"
            android:minHeight="48dp"
            app:srcCompat="@drawable/iconcarrinhooff" />

        <ImageButton
            android:id="@+id/imgBtnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:backgroundTint="#00FFFFFF"
            android:minHeight="48dp"
            app:srcCompat="@drawable/iconhomeon" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewHeader"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="#FF9CC0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            app:srcCompat="@drawable/logomarca" />

        <ImageButton
            android:id="@+id/imgBtnPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="360dp"
            android:layout_marginTop="1dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/Login"
            android:minHeight="48dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/iconuser" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/Titulo"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewHeader" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/imagemloja"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="182dp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rua"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="331dp" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Vila"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="80dp" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SaoPaulo"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="384dp" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Horarios"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="418dp" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SegSex"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="441dp" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SabDom"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="467dp" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TelContato"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="505dp" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="585dp" />

</androidx.constraintlayout.widget.ConstraintLayout>